<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.animepopular.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_homeFragment_to_detailFragment" app:destination="@id/detailFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_homeFragment_to_languageFragment" app:destination="@id/languageFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_homeFragment_to_genreFragment" app:destination="@id/genreFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_homeFragment_to_newsFragment" app:destination="@id/newsFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_homeFragment_to_scheduleFragment" app:destination="@id/scheduleFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.animepopular.ui.detail.DetailFragment"
        android:label="@string/label_detail"
        tools:layout="@layout/fragment_detail">
        <argument android:name="anime" app:argType="com.example.animepopular.model.AnimeItem"/>
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.example.animepopular.ui.language.LanguageFragment"
        android:label="@string/label_language"
        tools:layout="@layout/fragment_language"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.animepopular.ui.feature.SearchFragment"
        android:label="@string/searchanime"
        tools:layout="@layout/fragment_search">
        <action android:id="@+id/action_searchFragment_to_detailFragment" app:destination="@id/detailFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.animepopular.ui.feature.FavoritesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorites">
        <action android:id="@+id/action_favoritesFragment_to_detailFragment" app:destination="@id/detailFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/topRatedFragment"
        android:name="com.example.animepopular.ui.feature.TopRatedFragment"
        android:label="@string/toprated"
        tools:layout="@layout/fragment_top_rated">
        <action android:id="@+id/action_topRatedFragment_to_detailFragment" app:destination="@id/detailFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/genreFragment"
        android:name="com.example.animepopular.ui.feature.GenreFragment"
        android:label="@string/Genre"
        tools:layout="@layout/fragment_genre">
        <argument android:name="genre" app:argType="string" android:defaultValue="Action"/>
        <action android:id="@+id/action_genreFragment_to_detailFragment" app:destination="@id/detailFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.animepopular.ui.feature.ScheduleFragment"
        android:label="@string/airing"
        tools:layout="@layout/fragment_schedule"/>

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.animepopular.ui.feature.NewsFragment"
        android:label="@string/News"
        tools:layout="@layout/fragment_news"/>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.animepopular.ui.about.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action android:id="@+id/action_profileFragment_to_settingsFragment" app:destination="@id/settingsFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
        <action android:id="@+id/action_profileFragment_to_aboutFragment" app:destination="@id/aboutFragment" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.animepopular.ui.about.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.animepopular.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>

</navigation>